# stock-ticker

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md
data/: watchlist.json
docs/html/: StockApiClient_8cpp.html  StockApiClient_8cpp__incl.map  StockApiClient_8cpp__incl.md5  StockApiClient_8cpp_source.html  StockApiClient_8h.html  StockApiClient_8h__dep__incl.map  StockApiClient_8h__dep__incl.md5  StockApiClient_8h__incl.map  StockApiClient_8h__incl.md5  StockApiClient_8h_source.html  StockAsciiChart_8cpp.html  StockAsciiChart_8cpp__incl.map  StockAsciiChart_8cpp__incl.md5  StockAsciiChart_8cpp_source.html  StockAsciiChart_8h.html  StockAsciiChart_8h__dep__incl.map  StockAsciiChart_8h__dep__incl.md5  StockAsciiChart_8h__incl.map  StockAsciiChart_8h__incl.md5  StockAsciiChart_8h_source.html  StockData_8h.html  StockData_8h__dep__incl.map  StockData_8h__dep__incl.md5  StockData_8h__incl.map  StockData_8h__incl.md5  StockData_8h_source.html  StockTickerMain_8cpp.html  StockTickerMain_8cpp__incl.map  StockTickerMain_8cpp__incl.md5  StockTickerMain_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  StockTickerMain_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  StockTickerMain_8cpp_a80d7dacd9448e02d038466de85dab0b2_icgraph.map  StockTickerMain_8cpp_a80d7dacd9448e02d038466de85dab0b2_icgraph.md5  StockTickerMain_8cpp_source.html  StockTickerWidget_8cpp.html  StockTickerWidget_8cpp__incl.map  StockTickerWidget_8cpp__incl.md5  StockTickerWidget_8cpp_source.html  StockTickerWidget_8h.html  StockTickerWidget_8h__dep__incl.map  (+93 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  classes_0.js  files_0.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  searchdata.js  typedefs_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
include/: StockApiClient.h  StockAsciiChart.h  StockData.h  StockTickerWidget.h
resources/: resources.qrc
src/: StockApiClient.cpp  StockAsciiChart.cpp  StockTickerMain.cpp  StockTickerWidget.cpp
tests/: StockApiClient_test.cpp  StockApiClient_test.h  StockAsciiChart_test.cpp  StockAsciiChart_test.h  StockData_test.cpp  StockData_test.h  StockTickerWidget_test.cpp  StockTickerWidget_test.h
